Ajustes gerais nos WSs customizados